<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.covid_19tracker.Fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_world"
        android:name="com.example.covid_19tracker.Fragments.DashboardFragment"
        android:label="@string/title_world"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_precautions"
        android:name="com.example.covid_19tracker.Fragments.PrecautionsFragment"
        android:label="@string/title_precautions"
        tools:layout="@layout/fragment_precautions" />
    <fragment
        android:id="@+id/navigation_helpline"
        android:name="com.example.covid_19tracker.Fragments.HelplineFragment"
        android:label="@string/title_helpline"
        tools:layout="@layout/fragment_helpline" />
</navigation>
