<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/flag"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:elevation="100dp"
        android:src="@drawable/india"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/half_circle"
        android:layout_width="158dp"
        android:layout_height="635dp"
        android:src="@drawable/half_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countryName"
        android:layout_width="339dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:text="@string/india"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/active_cases_layout"
        android:layout_width="149dp"
        android:layout_height="121dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layout_constraintCircle="@id/half_circle"
        app:layout_constraintCircleAngle="280"
        app:layout_constraintCircleRadius="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_cases_layout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/active_text"
            android:layout_width="137dp"
            android:layout_height="26dp"
            android:elevation="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/active_cases"
            android:textColor="#ffd300"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.347"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/active_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/placeholder_num"
            android:elevation="20dp"
            android:textColor="#ffd300"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.262"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/active_text" />

        <TextView
            android:id="@+id/active_delta"
            android:layout_width="72dp"
            android:layout_height="24dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/placeholder_num1"
            android:textStyle="bold"
            android:textColor="#ffd300"
            android:textSize="16sp"
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/active_number"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/total_cases_layout"
        android:layout_width="151dp"
        android:layout_height="115dp"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/half_circle"
        app:layout_constraintCircle="@id/half_circle"
        app:layout_constraintCircleAngle="325"
        app:layout_constraintCircleRadius="170dp"
        app:layout_constraintTop_toBottomOf="@+id/countryName"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="159dp">

        <TextView
            android:id="@+id/total_text"
            android:layout_width="137dp"
            android:layout_height="26dp"
            android:layout_marginTop="16dp"
            android:text="@string/total_cases"
            android:elevation="20dp"
            android:textColor="#2e5392"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.347"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/placeholder_num"
            android:textStyle="bold"
            android:elevation="20dp"
            android:textColor="#2e5392"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_text" />

        <TextView
            android:id="@+id/total_delta"
            android:layout_width="70dp"
            android:layout_height="23dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/placeholder_num1"
            android:textStyle="bold"
            android:elevation="20dp"
            android:textColor="#2e5392"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_number"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/death_layout"
        android:layout_width="149dp"
        android:layout_height="121dp"
        android:layout_weight="1"
        app:layout_constraintCircle="@id/half_circle"
        app:layout_constraintCircleAngle="240"
        app:layout_constraintCircleRadius="180dp"
        app:layout_constraintTop_toBottomOf="@+id/active_cases_layout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="84dp">

        <TextView
            android:id="@+id/death_text"
            android:layout_width="137dp"
            android:layout_height="26dp"
            android:layout_marginTop="16dp"
            android:text="@string/death"
            android:elevation="20dp"
            android:textColor="#FF0000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.347"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/death_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/placeholder_num"
            android:elevation="20dp"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.262"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/death_text" />

        <TextView
            android:id="@+id/death_delta"
            android:layout_width="71dp"
            android:layout_height="29dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/placeholder_num1"
            android:elevation="20dp"
            android:textColor="#FF0000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/death_number"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="149dp"
        android:layout_height="121dp"
        android:layout_weight="1"
        android:elevation="20dp"
        android:id="@+id/recovered_layout"
        app:layout_constraintCircle="@id/half_circle"
        app:layout_constraintCircleAngle="190"
        app:layout_constraintCircleRadius="200dp"
        app:layout_constraintTop_toBottomOf="@+id/death_layout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="84dp">

        <TextView
            android:id="@+id/recovered_text"
            android:layout_width="137dp"
            android:layout_height="26dp"
            android:layout_marginTop="16dp"
            android:text="@string/recovered"
            android:textColor="#4b8b3b"
            android:textSize="22sp"
            android:elevation="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.347"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recovered_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/placeholder_num"
            android:elevation="20dp"
            android:textColor="#4b8b3b"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.262"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recovered_text" />

        <TextView
            android:id="@+id/recovered_delta"
            android:layout_width="68dp"
            android:layout_height="28dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/placeholder_num1"
            android:elevation="20dp"
            android:textColor="#4b8b3b"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recovered_number"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="Learn More>>"
        android:id="@+id/learn_more_button"
        android:textColor="@color/colorPrimary"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="20dp"
        app:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="World"
        android:id="@+id/world_button"
        android:textColor="@color/colorPrimary"
        app:icon="@drawable/outline_search_black_18dp"
        app:iconTint="@color/colorPrimaryDark"
        app:iconSize="18dp"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="20dp"
        app:elevation="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flag" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Info"
        android:id="@+id/info_button"
        android:textColor="@color/colorPrimary"
        app:backgroundTint="@color/colorAccent"
        app:icon="@drawable/outline_menu_book_black_24dp"
        app:iconTint="@color/colorPrimaryDark"
        app:iconSize="18dp"
        app:cornerRadius="20dp"
        app:elevation="30dp"
        app:layout_constraintBottom_toTopOf="@+id/flag"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>